# Vera-Molnar

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp  rectangle.txt  tab1.html  tab1.txt  tab2.html  tab2.txt  tab3.html  tab3.txt  tab4.html  tab4.txt  tab5.html  tab5.txt  test2.html  transfo1.txt  transfo2.txt  transfo3.txt  transfo4.txt  transfo5.txt  transformation.txt  veramolnar
src/: canvas.cpp  carre.cpp  carre_alea.cpp  complex_object.cpp  file.cpp  main.cpp  simple_object.cpp  svg.cpp  test_draw_complex_object.cpp  test_draw_multiple_object.cpp  test_draw_multiple_object_from_file.cpp  test_draw_none_canvas.cpp  test_draw_simple_object.cpp  test_draw_simple_object_html.cpp  test_draw_trait_Vera.cpp  test_file_to_transform.cpp  test_svg.cpp  transformation.cpp  veramolnar.cpp
src/utils/: canvas.hpp  complex_object.hpp  file.hpp  structures.hpp  svg.hpp  test_draw_complex_object.hpp  test_draw_simple_object.hpp  test_svg.hpp  transformation.hpp
utils/: structures.hpp
